@@ -2,12 +2,14 @@ package io.zulia.client.command;
 
 import io.zulia.client.command.base.SimpleCommand;
 import io.zulia.client.command.base.SingleIndexRoutableCommand;
+import io.zulia.client.command.builder.Search;
 import io.zulia.client.pool.ZuliaConnection;
 import io.zulia.client.result.UpdateIndexResult;
 import io.zulia.fields.FieldConfigBuilder;
 import io.zulia.message.ZuliaIndex;
 import io.zulia.message.ZuliaIndex.UpdateIndexSettings;
 import io.zulia.message.ZuliaIndex.UpdateIndexSettings.Operation.OperationType;
+import io.zulia.message.ZuliaServiceOuterClass.QueryRequest;
 import io.zulia.message.ZuliaServiceOuterClass.UpdateIndexRequest;
 import io.zulia.message.ZuliaServiceOuterClass.UpdateIndexResponse;
 import io.zulia.util.ZuliaUtil;
@@ -18,19 +20,20 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 import static io.zulia.message.ZuliaServiceGrpc.ZuliaServiceBlockingStub;
 
 /**
  * Allows partial index changes.  To replace the entire index config use {@link CreateIndex}
- * @author mdavis
  *
+ * @author mdavis
  */
 public class UpdateIndex extends SimpleCommand<UpdateIndexRequest, UpdateIndexResult> implements SingleIndexRoutableCommand {
 
 	private Double requestFactor;
 	private Integer minShardRequest;
-	private Integer numberOfShards;
+
 	private String indexName;
 	private Integer idleTimeWithoutCommit;
 	private Integer shardCommitInterval;
@@ -44,89 +47,124 @@ public class UpdateIndex extends SimpleCommand<UpdateIndexRequest, UpdateIndexRe
 	private final UpdateIndexSettings.Operation.Builder analyzerSettingsOperation = UpdateIndexSettings.Operation.newBuilder();
 	private List<ZuliaIndex.AnalyzerSettings> analyzerSettingsList = Collections.emptyList();
 
-
 	private final UpdateIndexSettings.Operation.Builder fieldConfigOperation = UpdateIndexSettings.Operation.newBuilder();
 	private List<ZuliaIndex.FieldConfig> fieldConfigList = Collections.emptyList();
 	private UpdateIndexSettings.Operation.Builder metaDataOperation = UpdateIndexSettings.Operation.newBuilder();
 	private Document metadata = new Document();
+
+	private UpdateIndexSettings.Operation.Builder warmingSearchOperation = UpdateIndexSettings.Operation.newBuilder();
+
+	private List<QueryRequest> warmingSearches = Collections.emptyList();
 
 	public UpdateIndex(String indexName) {
 		this.indexName = indexName;
 	}
 
 	public UpdateIndex clearAnalyzerSettingsChanges() {
-		analyzerSettingsOperation.setEnable(false);
-		fieldConfigOperation.setOperationType(OperationType.MERGE);
-		analyzerSettingsOperation.clearRemovedKeys();
-		if (!analyzerSettingsList.isEmpty()) {
-			analyzerSettingsList.clear();
+		this.analyzerSettingsOperation.setEnable(false);
+		this.analyzerSettingsOperation.setOperationType(OperationType.MERGE);
+		this.analyzerSettingsOperation.clearRemovedKeys();
+		if (!this.analyzerSettingsList.isEmpty()) {
+			this.analyzerSettingsList.clear();
 		}
 		return this;
 	}
 
+	public UpdateIndex removeAnalyzerSettingsByName(String... namesToRemove) {
+		return removeAnalyzerSettingsByName(Arrays.asList(namesToRemove));
+	}
+
 	public UpdateIndex removeAnalyzerSettingsByName(Collection<String> namesToRemove) {
-		analyzerSettingsOperation.setEnable(true);
-		analyzerSettingsOperation.addAllRemovedKeys(namesToRemove);
+		this.analyzerSettingsOperation.setEnable(true);
+		this.analyzerSettingsOperation.addAllRemovedKeys(namesToRemove);
 		return this;
 	}
 
 	public UpdateIndex mergeAnalyzerSettings(ZuliaIndex.AnalyzerSettings... analyzerSettings) {
-		analyzerSettingsOperation.setEnable(true);
-		analyzerSettingsOperation.setOperationType(OperationType.MERGE);
-		this.analyzerSettingsList = Objects.requireNonNullElse(Arrays.asList(analyzerSettings), Collections.emptyList());
+		return mergeAnalyzerSettings(List.of(analyzerSettings));
+	}
+
+	public UpdateIndex mergeAnalyzerSettings(List<ZuliaIndex.AnalyzerSettings> analyzerSettings) {
+		if (analyzerSettings == null || analyzerSettings.isEmpty()) {
+			throw new IllegalArgumentException("Cannot merge null or empty analyzer settings");
+		}
+		this.analyzerSettingsOperation.setEnable(true);
+		this.analyzerSettingsOperation.setOperationType(OperationType.MERGE);
+		this.analyzerSettingsList = analyzerSettings;
 		return this;
 	}
 
 	public UpdateIndex replaceAnalyzerSettings(ZuliaIndex.AnalyzerSettings... analyzerSettings) {
-		analyzerSettingsOperation.setEnable(true);
-		analyzerSettingsOperation.setOperationType(OperationType.REPLACE);
-		this.analyzerSettingsList = Objects.requireNonNullElse(Arrays.asList(analyzerSettings), Collections.emptyList());
+		return replaceAnalyzerSettings(Arrays.asList(analyzerSettings));
+	}
+
+	public UpdateIndex replaceAnalyzerSettings(List<ZuliaIndex.AnalyzerSettings> analyzerSettings) {
+
+		if (analyzerSettings == null) {
+			analyzerSettings = Collections.emptyList();
+		}
+
+		this.analyzerSettingsOperation.setEnable(true);
+		this.analyzerSettingsOperation.setOperationType(OperationType.REPLACE);
+		this.analyzerSettingsList = analyzerSettings;
 		return this;
 	}
 
-
 	public UpdateIndex clearFieldConfigChanges() {
-		fieldConfigOperation.setEnable(false);
-		fieldConfigOperation.setOperationType(OperationType.MERGE);
-		fieldConfigOperation.clearRemovedKeys();
-		if (!fieldConfigList.isEmpty()) {
-			fieldConfigList.clear();
+		this.fieldConfigOperation.setEnable(false);
+		this.fieldConfigOperation.setOperationType(OperationType.MERGE);
+		this.fieldConfigOperation.clearRemovedKeys();
+		if (!this.fieldConfigList.isEmpty()) {
+			this.fieldConfigList.clear();
 		}
 		return this;
 	}
 
-	public UpdateIndex removeFieldConfigByStoredName(Collection<String> namesToRemove) {
-		fieldConfigOperation.setEnable(true);
-		fieldConfigOperation.addAllRemovedKeys(namesToRemove);
-		return this;
+	public UpdateIndex removeFieldConfigByStoredName(String... namesToRemove) {
+		return removeFieldConfigByStoredName(Arrays.asList(namesToRemove));
 	}
 
-	public UpdateIndex replaceFieldConfig(FieldConfigBuilder... fieldConfigs) {
-		fieldConfigOperation.setEnable(true);
-		fieldConfigOperation.setOperationType(OperationType.REPLACE);
-		this.fieldConfigList =  Objects.requireNonNullElse(Arrays.stream(fieldConfigs).map(FieldConfigBuilder::build).toList(), Collections.emptyList());
+	public UpdateIndex removeFieldConfigByStoredName(Collection<String> namesToRemove) {
+		this.fieldConfigOperation.setEnable(true);
+		this.fieldConfigOperation.addAllRemovedKeys(namesToRemove);
 		return this;
 	}
 
 	public UpdateIndex replaceFieldConfig(ZuliaIndex.FieldConfig... fieldConfigs) {
-		fieldConfigOperation.setEnable(true);
-		fieldConfigOperation.setOperationType(OperationType.REPLACE);
-		this.fieldConfigList = Objects.requireNonNullElse(Arrays.asList(fieldConfigs), Collections.emptyList());
-		return this;
+		return replaceFieldConfig(Arrays.asList(fieldConfigs));
 	}
 
+	public UpdateIndex replaceFieldConfig(FieldConfigBuilder... fieldConfigs) {
+		return replaceFieldConfig(Arrays.stream(fieldConfigs).map(FieldConfigBuilder::build).collect(Collectors.toList()));
+	}
 
-	public UpdateIndex mergeFieldConfig(FieldConfigBuilder... fieldConfigs) {
-		fieldConfigOperation.setEnable(true);
-		fieldConfigOperation.setOperationType(OperationType.MERGE);
-		this.fieldConfigList =  Objects.requireNonNullElse(Arrays.stream(fieldConfigs).map(FieldConfigBuilder::build).toList(), Collections.emptyList());
+	public UpdateIndex replaceFieldConfig(List<ZuliaIndex.FieldConfig> fieldConfigs) {
+		if (fieldConfigs == null) {
+			fieldConfigs = Collections.emptyList();
+		}
+
+		this.fieldConfigOperation.setEnable(true);
+		this.fieldConfigOperation.setOperationType(OperationType.REPLACE);
+		this.fieldConfigList = fieldConfigs;
 		return this;
 	}
 
 	public UpdateIndex mergeFieldConfig(ZuliaIndex.FieldConfig... fieldConfigs) {
-		fieldConfigOperation.setEnable(true);
-		fieldConfigOperation.setOperationType(OperationType.MERGE);
-		this.fieldConfigList = Objects.requireNonNullElse(Arrays.asList(fieldConfigs), Collections.emptyList());
+		return mergeFieldConfig(Arrays.asList(fieldConfigs));
+	}
+
+	public UpdateIndex mergeFieldConfig(FieldConfigBuilder... fieldConfigs) {
+		return mergeFieldConfig(Arrays.stream(fieldConfigs).map(FieldConfigBuilder::build).toList());
+	}
+
+	public UpdateIndex mergeFieldConfig(List<ZuliaIndex.FieldConfig> fieldConfigs) {
+		if (fieldConfigs == null || fieldConfigs.isEmpty()) {
+			throw new IllegalArgumentException("Cannot merge null or empty warming searches");
+		}
+
+		this.fieldConfigOperation.setEnable(true);
+		this.fieldConfigOperation.setOperationType(OperationType.MERGE);
+		this.fieldConfigList = fieldConfigs;
 		return this;
 	}
 
@@ -229,32 +267,96 @@ public class UpdateIndex extends SimpleCommand<UpdateIndexRequest, UpdateIndexRe
 		return this;
 	}
 
-
 	public UpdateIndex clearMetadataChanges() {
-		metaDataOperation.setEnable(false);
-		metaDataOperation.setOperationType(OperationType.MERGE);
-		metaDataOperation.clearRemovedKeys();
+		this.metaDataOperation.setEnable(false);
+		this.metaDataOperation.setOperationType(OperationType.MERGE);
+		this.metaDataOperation.clearRemovedKeys();
 		metadata = new Document();
 		return this;
 	}
 
-	public UpdateIndex removeMetadataByKey(Collection<String> namesToRemove) {
-		metaDataOperation.setEnable(true);
-		metaDataOperation.addAllRemovedKeys(namesToRemove);
+	public UpdateIndex removeMetadataByKey(String... keysToRemove) {
+		return removeMetadataByKey(Arrays.asList(keysToRemove));
+	}
+
+	public UpdateIndex removeMetadataByKey(Collection<String> keysToRemove) {
+		this.metaDataOperation.setEnable(true);
+		this.metaDataOperation.addAllRemovedKeys(keysToRemove);
 		return this;
 	}
 
 	public UpdateIndex replaceMetadata(Document metadata) {
-		metaDataOperation.setEnable(true);
-		metaDataOperation.setOperationType(OperationType.REPLACE);
+		this.metaDataOperation.setEnable(true);
+		this.metaDataOperation.setOperationType(OperationType.REPLACE);
 		this.metadata = Objects.requireNonNullElse(metadata, new Document());
 		return this;
 	}
 
 	public UpdateIndex mergeMetadata(Document metadata) {
-		metaDataOperation.setEnable(true);
-		metaDataOperation.setOperationType(OperationType.MERGE);
+		if (metadata == null || metadata.isEmpty()) {
+			throw new IllegalArgumentException("Cannot merge null or empty metadata");
+		}
+
+		this.metaDataOperation.setEnable(true);
+		this.metaDataOperation.setOperationType(OperationType.MERGE);
 		this.metadata = Objects.requireNonNullElse(metadata, new Document());
+		return this;
+	}
+
+	public UpdateIndex clearWarmingSearchChanges() {
+		warmingSearchOperation.setEnable(false);
+		warmingSearchOperation.setOperationType(OperationType.MERGE);
+		warmingSearchOperation.clearRemovedKeys();
+		if (!warmingSearches.isEmpty()) {
+			warmingSearches.clear();
+		}
+		return this;
+	}
+
+	public UpdateIndex removeWarmingSearchesByLabel(String... namesToRemove) {
+		return removeWarmingSearchesByLabel(Arrays.asList(namesToRemove));
+	}
+
+	public UpdateIndex removeWarmingSearchesByLabel(Collection<String> namesToRemove) {
+		warmingSearchOperation.setEnable(true);
+		warmingSearchOperation.addAllRemovedKeys(namesToRemove);
+		return this;
+	}
+
+	public UpdateIndex mergeWarmingSearches(Search... searches) {
+		return mergeWarmingSearches(Arrays.asList(searches));
+	}
+
+	public UpdateIndex mergeWarmingSearches(Collection<Search> searches) {
+		List<QueryRequest> queryRequests = searches.stream().map(Search::getRequest).toList();
+		return mergeWarmingSearches(queryRequests);
+	}
+
+	private UpdateIndex mergeWarmingSearches(List<QueryRequest> queryRequests) {
+		if (queryRequests == null || queryRequests.isEmpty()) {
+			throw new IllegalArgumentException("Cannot merge null or empty warming searches");
+		}
+		this.warmingSearchOperation.setEnable(true);
+		this.warmingSearchOperation.setOperationType(OperationType.MERGE);
+		this.warmingSearches = queryRequests;
+		return this;
+	}
+
+	public UpdateIndex replaceWarmingSearches(Search... searches) {
+		return replaceWarmingSearches(Arrays.asList(searches));
+	}
+
+	public UpdateIndex replaceWarmingSearches(Collection<Search> searches) {
+		return replaceWarmingSearches(searches.stream().map(Search::getRequest).toList());
+	}
+
+	public UpdateIndex replaceWarmingSearches(List<QueryRequest> queryRequests) {
+		if (queryRequests == null) {
+			queryRequests = Collections.emptyList();
+		}
+		this.warmingSearchOperation.setEnable(true);
+		this.warmingSearchOperation.setOperationType(OperationType.REPLACE);
+		this.warmingSearches = queryRequests;
 		return this;
 	}
 
@@ -276,6 +378,8 @@ public class UpdateIndex extends SimpleCommand<UpdateIndexRequest, UpdateIndexRe
 		updateIndexSettings.addAllFieldConfig(fieldConfigList);
 		updateIndexSettings.setFieldConfigOperation(fieldConfigOperation);
 
+		updateIndexSettings.addAllWarmingSearches(warmingSearches.stream().map(QueryRequest::toByteString).toList());
+		updateIndexSettings.setWarmingSearchesOperation(warmingSearchOperation);
 
 		if (requestFactor != null) {
 			updateIndexSettings.setSetRequestFactor(true);
